CTrackUAT/src/objects/Shipper_Master__c.object
<CustomObject>
    <fields>
        <fullName>Category_of_Shipment__c</fullName>
        <label>Category of Shipment</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode_of_Shipment__c</fullName>
        <label>Mode of Shipment</label>
        <picklist>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sea</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipper_Name__c</fullName>
        <label>Shipper Name</label>
        <picklist>
            <picklistValues>
                <fullName>UPS SCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCHENKER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIPPON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PANALPINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL LOGISTICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Terms_of_Delivery__c</fullName>
        <label>Terms of Delivery</label>
        <picklist>
            <picklistValues>
                <fullName>CIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXworks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Shipper Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Shipper_Name__c</columns>
        <columns>Category_of_Shipment__c</columns>
        <columns>Terms_of_Delivery__c</columns>
        <columns>Mode_of_Shipment__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Shipper Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipper Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>